fix overflow on project details

--- a/src/Components/Project.scss
+++ b/src/Components/Project.scss
@@ -2,7 +2,6 @@
 
 .project {
   width: 50%;
-  height: 440px;
   .project-inner {
     margin: 0 2px 2px 0;
     background-color: $projects-background;
